# config/routes.rb
@@ -7,6 +7,7 @@ Rails.application.routes.draw do
 
   namespace :api do
     resources :cards, only: [ :index, :create, :update ], param: :uuid
+    resources :tags, only: [ :index ], param: :slug
 
     namespace :owner do
       resources :cards, only: [ :create ]
